[gd_scene load_steps=3 format=2]

[ext_resource path="res://Combat/UI/TargetInfo.gd" type="Script" id=1]
[ext_resource path="res://Assets/progress.png" type="Texture" id=2]

[node name="TargetInfo" type="Panel"]
anchor_right = 0.217
anchor_bottom = 0.174
margin_right = -0.400024
margin_bottom = 0.199989
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 60.0
margin_bottom = 57.0
__meta__ = {
"_edit_lock_": true
}

[node name="TargetName" type="Label" parent="."]
anchor_left = 0.251
anchor_top = 0.033
anchor_right = 0.951
anchor_bottom = 0.148
margin_left = -0.0661545
margin_top = 0.0453844
margin_right = -0.0661621
margin_bottom = 0.0153847
text = "TargetName"
__meta__ = {
"_edit_lock_": true
}

[node name="TargetHealthBar" type="TextureProgress" parent="."]
anchor_left = 0.252
anchor_top = 0.353
anchor_right = 0.814
anchor_bottom = 0.459
margin_left = 0.0412292
margin_top = -0.0352325
margin_right = -0.0787659
margin_bottom = 0.0327682
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
tint_under = Color( 0.458824, 0.121569, 0.333333, 1 )
tint_progress = Color( 0.952941, 0.0745098, 0.301961, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ActionsScroll" type="ScrollContainer" parent="."]
anchor_top = 0.516
anchor_right = 0.981
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 0.0479965
margin_right = -0.0600128
margin_bottom = -3.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Actions" type="HBoxContainer" parent="ActionsScroll"]
